fix table size on mobile

--- a/boris.css
+++ b/boris.css
@@ -235,3 +235,9 @@
     display: block;
   }
 }
+
+@media screen and (max-width: 576px) {
+  .table tbody td.title {
+    min-width: none;
+  }
+}
